--- a/ci.html
+++ b/ci.html
@@ -26,7 +26,7 @@
   
 </head>
 <body>
-  <section id="menu-2o" data-rv-view="803">
+  <section id="menu-2o" data-rv-view="146">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="#top" class="navbar-logo"><img src="assets/images/cplatform-1.svg" alt="Mobirise"></a>
+                        <a href="index.html" class="navbar-logo"><img src="assets/images/cplatform-1.svg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2w" data-rv-view="807" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2w" data-rv-view="148" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -70,7 +70,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-2u" data-rv-view="805" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 80px;">
+<section class="mbr-section mbr-section__container" id="image2-2u" data-rv-view="150" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 80px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -85,7 +85,7 @@
     </div>
 </section>
 
-<section class="mbr-footer mbr-section mbr-section-md-padding mbr-parallax-background" id="contacts3-2p" data-rv-view="809" style="background-image: url(assets/images/mbr-1920x1241.jpg); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-footer mbr-section mbr-section-md-padding mbr-parallax-background" id="contacts3-2p" data-rv-view="152" style="background-image: url(assets/images/mbr-1920x1241.jpg); padding-top: 90px; padding-bottom: 90px;">
 
 
     <div class="row">
@@ -129,7 +129,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="Hzk+oLwaET71SWuCQmSO60gRnSP4LyvIA8+YwiK9G0fMJKAckVVoOlz0MYNRvvJR8qxf0DMCMOfhnX/OzcpV9yvBUN5fRfTKSj1V/rDdAEwqYJQM/CVsWLKDdtmAz1Cr" data-form-email="true">
+                    <input type="hidden" value="1RPw//8DM8AjWWm7yrrG6RI/Mpw3kxtf4S4L1JkyyR0a/uPbbxDrRFprzMRrwXAs97glfgZVKKamtm5UAROaH49sSuTlDgubVrq5ZmmuW8ym/y2oZwDwK8G4yJ2nB5AH" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-2p-name">Name<span class="form-asterisk">*</span></label>
