--- a/ci.html
+++ b/ci.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://www.cplatform.io" data-toggle="dropdown-submenu" aria-expanded="true">C·Platform</a><div class="dropdown-menu"><a class="dropdown-item" href="#top">비전</a><a class="dropdown-item" href="index.html" aria-expanded="false">C 문화</a><a class="dropdown-item" href="#top" aria-expanded="false">걸어온 길</a><a class="dropdown-item" href="ci.html" aria-expanded="false">CI</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-14">NEWS</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-20" aria-expanded="false">MISSION</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-1z" aria-expanded="false">ROADMAP</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-2f" aria-expanded="false">PARTNERS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-13" aria-expanded="false">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="#top">백서 DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="https://www.cplatform.io" data-toggle="dropdown-submenu" aria-expanded="true">C·Platform</a><div class="dropdown-menu"><a class="dropdown-item" href="#top">비전</a><a class="dropdown-item" href="ci.html" aria-expanded="false">CI</a></div></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-14">NEWS</a></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-20" aria-expanded="false">MISSION</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-1z" aria-expanded="false">ROADMAP</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-2f" aria-expanded="false">PARTNERS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-13" aria-expanded="false">TEAM</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning-outline btn-warning" href="#top">백서 DOWNLOAD</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2w" data-rv-view="148" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2w" data-rv-view="148" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -129,7 +129,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="1RPw//8DM8AjWWm7yrrG6RI/Mpw3kxtf4S4L1JkyyR0a/uPbbxDrRFprzMRrwXAs97glfgZVKKamtm5UAROaH49sSuTlDgubVrq5ZmmuW8ym/y2oZwDwK8G4yJ2nB5AH" data-form-email="true">
+                    <input type="hidden" value="FSa6r2VdZacngR4wURysW/qKXhHsfTdbVaDzgk0VKT1QIcQe80wMkbg2zc3OO1kXplHKITTbp9nTki0H+XkfDMIN2bU+/ej8bBeMl3V9feGyzRG+ihM1PXQZ9ItEA2BG" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-2p-name">Name<span class="form-asterisk">*</span></label>
