--- a/ci.html
+++ b/ci.html
@@ -35,7 +35,7 @@
                 <div class="mbr-table-cell">
 
                     <div class="navbar-brand">
-                        <a href="index.html" class="navbar-logo"><img src="assets/images/cplatform-1.svg" alt="Mobirise"></a>
+                        <a href="https://cplatform.io" class="navbar-logo"><img src="assets/images/cplatform-1.svg" alt="Mobirise"></a>
                         
                     </div>
 
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2w" data-rv-view="148" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2w" data-rv-view="148" style="background-color: rgb(255, 255, 255); padding-top: 60px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -129,7 +129,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="FSa6r2VdZacngR4wURysW/qKXhHsfTdbVaDzgk0VKT1QIcQe80wMkbg2zc3OO1kXplHKITTbp9nTki0H+XkfDMIN2bU+/ej8bBeMl3V9feGyzRG+ihM1PXQZ9ItEA2BG" data-form-email="true">
+                    <input type="hidden" value="nhUj6UfObDZmoM9pmjiGC2tyRIg7NlPOmr/7Qp4CsIo6FWP+e5buESd7HgC7mT4Wupe0rQ6lK0nCBpQiMdEMLpDqVJgCi0NtCkMijrw602M0J4mVz4gtlCGCv/Y+oYFI" data-form-email="true">
 
                     <div class="form-group">
                         <label class="form-control-label" for="contacts3-2p-name">Name<span class="form-asterisk">*</span></label>
